make education and work section resposive

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
+
         <div id="name-social-container">
           <div class="text-center">
             <h1 id="my-name">
@@ -177,9 +178,9 @@
                 height="25%"
                 width="10%"
               />
-              <h2 class="m-0 ta-r blue-color-2">Career Camp</h2>
-              <p class="m-0 ta-r orange-color">Coding Ninjas</p>
-              <p class="m-0 ta-r grey-color">Feb 2020 - Present</p>
+              <h2 class="m-0 ta-r ta-l-s blue-color-2">Career Camp</h2>
+              <p class="m-0 ta-r ta-l-s orange-color">Coding Ninjas</p>
+              <p class="m-0 ta-r ta-l-s grey-color">Feb 2020 - Present</p>
             </div>
             <p class="my-1 grey-color">
               <i>
@@ -196,9 +197,9 @@
                 height="50%"
                 width="20%"
               />
-              <h2 class="m-0 ta-r blue-color-2">Front End Developer</h2>
-              <p class="m-0 ta-r orange-color">Spiety Technologies</p>
-              <p class="m-0 ta-r grey-color">May 2019 - July 2019</p>
+              <h2 class="m-0 ta-r ta-l-s blue-color-2">Front End Developer</h2>
+              <p class="m-0 ta-r ta-l-s orange-color">Spiety Technologies</p>
+              <p class="m-0 ta-r ta-l-s grey-color">May 2019 - July 2019</p>
             </div>
             <p class="my-1 grey-color">
               <i>
@@ -216,9 +217,9 @@
                 height="35%"
                 width="15%"
               />
-              <h2 class="m-0 ta-r blue-color-2">Web Instructor</h2>
-              <p class="m-0 ta-r orange-color">CampK12</p>
-              <p class="m-0 ta-r grey-color">June 2019 - August 2019</p>
+              <h2 class="m-0 ta-r ta-l-s blue-color-2">Web Instructor</h2>
+              <p class="m-0 ta-r ta-l-s orange-color">CampK12</p>
+              <p class="m-0 ta-r ta-l-s grey-color">June 2019 - August 2019</p>
             </div>
             <p class="my-1 grey-color">
               <i>
@@ -248,11 +249,13 @@
                 height="25%"
                 width="10%"
               />
-              <h2 class="m-0 ta-r blue-color-2">Bachelor Of Technology(CSE)</h2>
-              <p class="m-0 ta-r orange-color">
+              <h2 class="m-0 ta-r ta-l-s blue-color-2">
+                Bachelor Of Technology(CSE)
+              </h2>
+              <p class="m-0 ta-r ta-l-s orange-color">
                 Jamia Hamdard University, New Delhi
               </p>
-              <p class="m-0 ta-r grey-color">July 2016 - Present</p>
+              <p class="m-0 ta-r ta-l-s grey-color">July 2016 - Present</p>
             </div>
             <p class="my-1 grey-color">
               <i>
@@ -269,11 +272,11 @@
                 height="35%"
                 width="20%"
               />
-              <h2 class="m-0 ta-r blue-color-2">Class XII</h2>
-              <p class="m-0 ta-r orange-color">
+              <h2 class="m-0 ta-r ta-l-s blue-color-2">Class XII</h2>
+              <p class="m-0 ta-r ta-l-s orange-color">
                 Vinay Nagar Bengali Sr. Sec. School
               </p>
-              <p class="m-0 ta-r grey-color">April 2014 - April 2015</p>
+              <p class="m-0 ta-r ta-l-s grey-color">April 2014 - April 2015</p>
             </div>
             <p class="my-1 grey-color">
               <i>
@@ -290,11 +293,11 @@
                 height="35%"
                 width="20%"
               />
-              <h2 class="m-0 ta-r blue-color-2">Class X</h2>
-              <p class="m-0 ta-r orange-color">
+              <h2 class="m-0 ta-r ta-l-s blue-color-2">Class X</h2>
+              <p class="m-0 ta-r ta-l-s orange-color">
                 Vinay Nagar Bengali Sr. Sec. School
               </p>
-              <p class="m-0 ta-r grey-color">April 2012 - April 2013</p>
+              <p class="m-0 ta-r ta-l-s grey-color">April 2012 - April 2013</p>
             </div>
             <p class="my-1 grey-color">
               <i>
