--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Document</title>
+    <title>Subhankar Roy</title>
   </head>
   <body>
     <header id="body-header">
