add scroll and fill skill bars animation

--- a/index.html
+++ b/index.html
@@ -101,65 +101,101 @@
           </span>
           <span>SKILLS</span>
         </h1>
-        <div class="skills-display">
+        <div id="skills-container" class="skills-display">
           <div class="skill-progress">
-            <div class="fifty-percent mb-darkblue">
+            <div
+              class="fifty-percent mb-darkblue"
+              data-bar-width="50"
+              data-visited="true"
+            >
               <div class="skill-name">
                 <span>C</span>
               </div>
             </div>
           </div>
           <div class="skill-progress">
-            <div class="sixty-percent mb-blue">
+            <div
+              class="sixty-percent mb-blue"
+              data-bar-width="60"
+              data-visited="true"
+            >
               <div class="skill-name">
                 <span>C++</span>
               </div>
             </div>
           </div>
           <div class="skill-progress">
-            <div class="eighty-five-percent mb-violet">
+            <div
+              class="eighty-five-percent mb-violet"
+              data-bar-width="85"
+              data-visited="true"
+            >
               <div class="skill-name">
                 <span>HTML</span>
               </div>
             </div>
           </div>
           <div class="skill-progress">
-            <div class="seventy-five-percent mb-blue">
+            <div
+              class="seventy-five-percent mb-blue"
+              data-bar-width="75"
+              data-visited="true"
+            >
               <div class="skill-name">
                 <span>CSS</span>
               </div>
             </div>
           </div>
           <div class="skill-progress">
-            <div class="sixty-percent mb-orange">
+            <div
+              class="sixty-percent mb-orange"
+              data-bar-width="60"
+              data-visited="true"
+            >
               <div class="skill-name">
                 <span>Java</span>
               </div>
             </div>
           </div>
           <div class="skill-progress">
-            <div class="forty-percent mb-violet">
+            <div
+              class="forty-percent mb-violet"
+              data-bar-width="40"
+              data-visited="true"
+            >
               <div class="skill-name">
                 <span>Javascript</span>
               </div>
             </div>
           </div>
           <div class="skill-progress">
-            <div class="forty-percent mb-orange">
+            <div
+              class="forty-percent mb-orange"
+              data-bar-width="40"
+              data-visited="true"
+            >
               <div class="skill-name">
                 <span>NodeJS</span>
               </div>
             </div>
           </div>
           <div class="skill-progress">
-            <div class="forty-percent mb-green">
+            <div
+              class="forty-percent mb-green"
+              data-bar-width="40"
+              data-visited="true"
+            >
               <div class="skill-name">
                 <span>ReactJS</span>
               </div>
             </div>
           </div>
           <div class="skill-progress">
-            <div class="forty-percent mb-violet">
+            <div
+              class="forty-percent mb-violet"
+              data-bar-width="40"
+              data-visited="true"
+            >
               <div class="skill-name">
                 <span>MongoDB</span>
               </div>
@@ -390,5 +426,6 @@
         </div>
       </section>
     </main>
+    <script src="main.js"></script>
   </body>
 </html>
